# realtime-trains

./: .gitignore  main.py  pyproject.toml
realtime_trains/: api.py  departure_board.py  model_location.py  models.py  setup.py
src/: setup.py
